# retropie2600

./: .gitignore  README.md  pyproject.toml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-4-gpio-full.txt  task-4-gpio-momentary.txt  task-4-gpio-stub.txt  task-4-gpio-toggle.txt  task-5-injector-tests.txt  task-5-stella-keys.txt
.sisyphus/notepads/hardware-guide-upgrade/: decisions.md  issues.md  learnings.md
.sisyphus/notepads/remove-overvoltage-section/: learnings.md
.sisyphus/notepads/retropie2600-phase1/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/plans/: hardware-guide-upgrade.md  remove-overvoltage-section.md  retropie2600-phase1.md
config/: env.example  retroarch.cfg.example  switches.example.yaml
docs/: hardware-guide.md  installation.md  retroarch-setup.md
retropie2600/: __init__.py  __main__.py  config.py  daemon.py  gpio_monitor.py  input_injector.py  power_led.py  shader_controller.py  shutdown_controller.py
systemd/: 99-retropie2600.rules  retropie2600.service
tests/: conftest.py  test_config.py  test_daemon.py  test_gpio_monitor.py  test_input_injector.py  test_power_led.py  test_shader_controller.py  test_shutdown_controller.py
