[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "retropie2600"
version = "0.1.0"
description = "Atari 2600 console switch daemon for Raspberry Pi / RetroPie"
requires-python = ">=3.9"
dependencies = [
    "pyyaml",
    "pigpio; sys_platform == 'linux'",
    "evdev; sys_platform == 'linux'",
    "sdnotify; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock"]

[tool.setuptools.packages.find]
where = ["."]
include = ["retropie2600*"]
